--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,33 @@ body {
   text-align: center;
   color: #A9F3D8
 }
+
+.lsitgroup{
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  
+  
+}
+.list-group{
+  padding-left: 0;
+  margin-bottom: 20px;
+  list-style: none;
+}
+.list-group-item{
+position: relative;
+display: block;
+padding: 10px 15px;
+margin-bottom: 1px !important;
+background-color: #fff;
+border: 1px solid #ddd;
+background-color: #DEEADE;
+}
+.close{
+  font-size:16px;
+}
