--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 #footer{
@@ -108,6 +108,7 @@ transition: height 0.7s ease-out;
   margin:0px;
 }
 .lists{
+  cursor: pointer
  
 }
 .listDiv{
