--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ background-color: #DEEADE;
 }
 
 .cInbox{
-  background-color: #CBC3C3;
+  background-color: #DBF1D5;
   border-right:1px solid #9999a3;
   margin: 0px;
   padding: 0px;
@@ -79,11 +79,12 @@ background-color: #DEEADE;
 
 }
 .cDetail{
-  background-color: white;
+  background-color:#303030;
   overflow-y: scroll;
   overflow-x: scroll;
   min-height: auto;
   min-width: auto;
+  height:800px;
 }
 /* .inboxList{
 max-height: 800px;
@@ -120,3 +121,28 @@ transition: height 0.7s ease-out;
   padding-left: 30px;
 
 }
+.inboxList ul li:hover {background: #A8EF82;}
+
+#headname{
+  
+  position: relative;
+  -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
+  animation: mymove 5s infinite;
+
+}
+#headname{
+  animation-timing-function: linear}
+@keyframes mymove {
+  from {left: 0px;}
+  to {left: 1300px;}
+}
+
+#mainHead{
+  color: #fff;
+	text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #5bde6e, 0 0 30px #5bde6e, 0 0 40px #5bde6e, 0 0 50px #5bde6e, 0 0 75px #5bde6e;
+	letter-spacing: 5px;
+	font: 54px 'MisoRegular';
+}
+.mainDetailsPage{
+}
+
